--- a/app/src/main/res/layout/fragment_other.xml
+++ b/app/src/main/res/layout/fragment_other.xml
@@ -50,6 +50,7 @@
             android:layout_marginBottom="14dp"
             android:text="@string/profile"
             android:textColor="#234E70"
+            android:clickable="false"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -98,6 +99,7 @@
             android:gravity="center"
             android:text="@string/notes"
             android:textColor="#234E70"
+            android:clickable="false"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -150,6 +152,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="14dp"
             android:text="@string/to_do"
+            android:clickable="false"
             android:textColor="#234E70"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -202,6 +205,7 @@
             android:layout_marginBottom="14dp"
             android:gravity="center"
             android:text="@string/tests"
+            android:clickable="false"
             android:textColor="#234E70"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
