--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -139,7 +139,7 @@
         android:layout_marginTop="48dp"
         android:text="@string/update"
         app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         app:layout_constraintTop_toBottomOf="@+id/up_toggleButton" />
 
     <Button
@@ -149,7 +149,7 @@
         android:layout_marginEnd="80dp"
         android:text="@string/cancel"
         android:backgroundTint="@color/Raspberry"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         app:layout_constraintBottom_toBottomOf="@+id/up_updatebtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/up_updatebtn"
