--- a/app/src/main/res/layout/activity_ptsd_1.xml
+++ b/app/src/main/res/layout/activity_ptsd_1.xml
@@ -139,7 +139,7 @@
             android:backgroundTint="#C0B2E7"
             android:text="yes"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -156,7 +156,7 @@
             android:backgroundTint="#C0B2E7"
             android:text="no"
             android:textAllCaps="false"
-            android:textColor="@color/white"
+            android:textColor="#234E70"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
