--- a/app/src/main/res/layout/activity_breathing.xml
+++ b/app/src/main/res/layout/activity_breathing.xml
@@ -27,6 +27,20 @@
             android:textColor="#234E70"
             android:textSize="30sp" />
 
+        <ImageView
+            android:id="@+id/image_logo"
+            android:layout_gravity="center"
+            android:layout_width="119dp"
+            android:layout_height="107dp"
+            android:layout_below="@id/Email"
+            android:contentDescription="TODO"
+            android:src="@drawable/vozyk_2_1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintLeft_toRightOf="@+id/password"
+            app:layout_constraintStart_toStartOf="parent" />
+
     </LinearLayout>
 
     <LinearLayout
